# FTPRP

./: .gitignore  CMakeLists.txt  README.md
FF/: CMakeLists.txt  ff  inst_pre.c  lex.fct_pddl.c  lex.ops_pddl.c  parse.c
FT/: .classpath  .project  README.md  Readme.docx  outputDom.pddl  outputProb.pddl
FT/Non-Det-PlaningProbs/Blocksworld/: domain.pddl  domain.xml  p1.pddl  p2.xml  property.xml
FT/src/Common/: SpecificPredicates.java
FT/src/Converter/: Converter.java
FT/src/Model/: Action.java  ConditionalEffect.java  Domain.java  Effect.java  Function.java  Literal.java  Problem.java
PRP/: elapsed.time  plan_numbers_and_cost  policy.out
PRP/.hg/: dirstate  hgrc  undo.desc
PRP/.hg/cache/: branchheads  tags
PRP/misc/: uncrustify.py
PRP/prp-scripts/: fault-tolerant-compilation.py  fault-tolerant-conversion.py  fault_tolerant_conversion.py
PRP/run/: .output.swp  aod.sh  domain.xml  downward.tmp.27044  elapsed.time  ftd.sh  output  outputDom.pddl  plan_numbers_and_cost  property.xml  sas_plan  simple_ftd.sh
PRP/src/: CMakeLists.txt  Makefile  nohup.out  output  output.sas  plan_numbers_and_cost  sas_plan
fond-benchmarks/blocksworld/: .p1.pddl.swp  domain.pddl
fond-benchmarks/blocksworld-ftd/: #domain.pddl#
fond-benchmarks/dom-simple/: problem.pddl  simple_dom.pddl
fond-benchmarks/simple-blocksworld/: domain.pddl  p25blocks.pddl  p2blocks.pddl  p3blocks.pddl  p4blocks.pddl  ptest.pddl  simple_prob.pddl  simple_prob2.pddl
run/: aod.sh  downward.sh  ff.sh  ftd.sh  output  output.aod  outputDom.pddl  outputProb.pddl  property.xml  trans.sh
(+222 files in other folders)
